--- a/example/storybook/src/api/LinearGradient/index.stories.mdx
+++ b/example/storybook/src/api/LinearGradient/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="api/LinearGradient" />
+<Meta title="api/LinearGradient" />;
 
 # LinearGradient
 
