--- a/example/storybook/src/getting-started/Styled/index.stories.mdx
+++ b/example/storybook/src/getting-started/Styled/index.stories.mdx
@@ -1,9 +1,291 @@
-import { Canvas, Meta, Story } from '@storybook/addon-docs';
+import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Getting Started/Styled" />
 
-# Styled
+# styled()
 
-We can even preview multiple Stories in a block. This
-gets rendered as a group but defines individual stories
-with unique URLs, which is great for review and testing.
+- With our **`styled`**function, you can easily extend existing components and make them customizable and themeable.
+- Let’s create a styled component
+  ```
+  // add style example
+  ```
+
+###
+
+### Configure styled
+
+- To configure styled, create a dank.styled.ts file (`.js`works too)
+
+### API
+
+- Component
+- config
+- component config
+- extended config
+
+### Features
+
+- State styles
+
+  - This includes the ability to define styles based on the component's state. This allows you to create dynamic and interactive styles that change based on user interactions or other events.
+  - The extended component accept a **`states`** prop, which is an object containing the state of the component. This prop can contain any number of state keys and values, such as **`{hover: true, active: true}`**. The library then uses this prop to apply the corresponding state styles to the component.
+  - The **`states`** prop allows developers to easily control the state of the component and its styles. For example, it can be used to apply hover styles to a button when the mouse is over the button, or to apply active styles to a button when it is clicked. The library uses the **`states`** prop to look up the state styles in the global style map and apply them to the component.
+  - It's important to note that the **`states`** prop is optional and will be used only if passed, otherwise the component will use the default styles.
+  - Sure, here's an example of how the **`states`** prop can be used:
+    [data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2730%27%20height=%2730%27/%3e](data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2730%27%20height=%2730%27/%3e)
+
+  ```jsx
+  const StyledButton = styled(Button, {
+  	 baseStyle: {
+  			style: {
+  					padding: 8,
+  				  borderRadius: 4,
+  				  backgroundColor: white
+  			},
+
+  			state: {
+  				  hover: {
+  						style: {
+  								backgroundColor: darkblue;
+  						}
+  				  }
+
+  				  hover: {
+  						style: {
+  								backgroundColor: pink;
+  						}
+  				  }
+  			}
+
+  	 }, {}, {}
+  );
+
+  function MyComponent() {
+    const [isHovered, setIsHovered] = useState(false);
+    const [isActive, setIsActive] = useState(false);
+
+    return (
+      <>
+      <StyledButton
+        states={{ hover: isHovered, active: isActive }}
+        onMouseEnter={() => setIsHovered(true)}
+        onMouseLeave={() => setIsHovered(false)}
+        onMouseDown={() => setIsActive(true)}
+        onMouseUp={() => setIsActive(false)}
+      >
+        Click Me
+      </StyledButton>
+      </>
+    );
+  }
+
+  ```
+
+  In the example above, we have a functional component that wraps a **`StyledButton`** component, which is the component returned by the **`styled`** function. The **`MyComponent`** component uses state hooks to keep track of whether the button is currently being hovered over or pressed (active). It then passes the current state to the **`StyledButton`** component via the **`states`** prop.
+  When the button is hovered over, the **`isHovered`** state is set to **`true`**, which causes the **`StyledButton`** component to apply the **`:hover`** styles to itself. When the button is pressed, the **`isActive`** state is set to **`true`**, which causes the **`StyledButton`** component to apply the **`:active`** styles to itself.
+  This way the developer can easily control the state of the component and its styles with the help of **`states`** prop.
+
+- Platform
+  - This allows you to easily create styles that are specific to a particular platform, such as web or mobile.
+  ```jsx
+  const Box = styled(
+    View,
+    {
+      baseStyle: {
+        style: {
+          borderRadius: '$full',
+        },
+        platform: {
+          web: {
+            style: {
+              bg: '$amber500',
+            },
+          },
+          ios: {
+            style: {
+              bg: '$blue500',
+            },
+          },
+          android: {
+            style: {
+              bg: '$red500',
+            },
+          },
+        },
+      },
+    },
+    {}
+  );
+  ```
+- Color mode
+  - This allows you to easily create styles that are specific to a particular color mode, like light or dark mode.
+  ```jsx
+  import React from 'react';
+  import { View } from 'react-native';
+  import { styled, StyledProvider } from '@dank-style/react';
+  import { config } from './dank.config';
+  const StyledComponent = styled(
+    View,
+    {
+      baseStyle: {
+        style: {
+          w: 100,
+          h: 100,
+        },
+        colorMode: {
+          dark: {
+            style: {
+              bg: '$info600',
+            },
+          },
+          light: {
+            style: {
+              bg: '$info800',
+            },
+          },
+        },
+      },
+      variants: {
+        VariantOne: {
+          style: {
+            bg: '$secondary600',
+            p: '$4',
+          },
+          colorMode: {
+            dark: {
+              style: {
+                bg: 'secondary200',
+              },
+            },
+          },
+        },
+      },
+    },
+    {}
+  );
+  ```
+- Media Query
+  - This allows you to apply styles based on screen width.
+  ```jsx
+  const MyButton = styled(Pressable, {
+    baseStyle: {
+      style: {
+        bg: '$red500',
+        p: '$3',
+        shadow: '$4',
+      },
+      queries: [
+        {
+          condition: '$md',
+          value: {
+            style: {
+              bg: '$blue500',
+            },
+            state: {
+              hover: {
+                style: {
+                  bg: '$green500',
+                },
+                state: {
+                  focus: {
+                    style: {
+                      bg: 'purple',
+                    },
+                  },
+                },
+              },
+            },
+            colorMode: {
+              dark: {
+                style: {
+                  bg: '$red500',
+                },
+              },
+              light: {
+                style: {
+                  bg: '$blue500',
+                },
+              },
+            },
+          },
+        },
+      ],
+    },
+  });
+  ```
+- Context based
+  - This allows you to easily propagate context-specific styles to child components, without having to pass props or manually style each child component individually.
+  ```jsx
+  const StyledButton = styled(
+    Pressable,
+    {
+      baseStyle: {
+        style: {
+          bg: '$primary600',
+          px: '$6',
+          py: '$4',
+        },
+        descendants: {
+          _text: {
+            style: {
+              color: '$white',
+            },
+          },
+        },
+      },
+    },
+    {
+      descendantStyle: ['_text'],
+    }
+  );
+  ```
+
+### Base styles
+
+- Base styles are the default styles that are applied to all instances of a component. They are used to establish a consistent look and feel across the application.
+  ```
+  example
+  ```
+
+### Variant
+
+- ## This allows you to easily create different variations of a component with different styles.
+  ```
+  example
+  ```
+-
+
+### Sizes
+
+- ## This allows you to easily create styles that are specific to a particular size of a component.
+  ```
+  example
+  ```
+
+### Default props
+
+- ## This allows you to specify default values for props that are not provided by the parent component. This can be useful for providing default styles or behavior for a component, or for handling cases where a required prop is not provided.
+  ```
+  example
+  ```
+
+## BaseStyle vs variant vs size
+
+- Base Styles: Base styles are the default styles that are applied to all instances of a component. They are used to establish a consistent look and feel across the application. Base styles can include things like font size, font family, padding, and margin.
+- Variants: Variants are used to create different visual styles for a component based on a specific theme (e.g. dark mode or light mode) or a specific context (e.g. primary or secondary button). Variants are used to change the visual appearance of the component without affecting its layout.
+- Sizes: Sizes are used to create different styles for a component based on its size. Sizes are used to change the layout of the component such as width, height, padding, font-size etc. For example, a button might have different padding for small, medium, and large sizes, or a text might have different font-size for different screen sizes.
+
+In summary, Variants are used to change the visual appearance of the component, sizes are used to change the layout of the component and base styles are used to establish a consistent look and feel across the application.
+
+- Specificity ??
+-
+
+### Limitations of styled
+
+- It may be harder to use with existing CSS libraries or frameworks, as the syntax and structure of the styles will be different.
+- Because the styles are scoped to the component, it can be harder to share styles between components. This can be mitigated by using a shared style object or a global style sheet.
+- The syntax of the **`styled`**function and the **`css`**template literal is different from traditional CSS, so it may take some time to get used to.
+- There may be compatibility issues with some older browsers, but this can be mitigated by using a polyfill or a tool that transpiles the CSS in JS code to traditional CSS.
+- You may also have some performance issues, with re-rendering of component and styles, if not implemented correctly.
+
+Overall, the **`styled`** function is a powerful tool for creating reusable, customizable, and themeable components, but it does have some limitations that should be taken into consideration when using it in a production environment.
