--- a/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
+++ b/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
@@ -2,8 +2,49 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="advanced/Babel Plugins" />
 
-# Babel Plugins
+## @dank-style/babel-plugin-styled-resolver
 
-We can even preview multiple Stories in a block. This
-gets rendered as a group but defines individual stories
-with unique URLs, which is great for review and testing.
+@dank-style/babel-plugin-styled-resolver transpiles your `styled` function calls and resolves the `component styling` in build time. It also generates all the `CSS rules` and style ids based on which these CSS styles are applied on the component. Doing this saves tons of time on runtime because all your style calculation is already done and all your app has to do is to inject this style into a style tag and viola! All your styles appear instantaneously. This helps us to improve the performance of the apps 5-6 times.
+
+### **Let us see how this Babel plugin works.**
+
+- First, it traverses your files and tries to find `styled` imported from “@dank-style/react”.
+- Once it finds a declaration of `styled` it then looks for its function call.
+- From that function call, it fetches the component style config(2nd Parameter), component config (3rd parameter), and component extended config (4th Parameter).
+- Then it resolves the styling and generates the CSS rules and corresponding style ids.
+- Once resolved it removes the 2nd parameter ( component style ) and adds a 5th param which is an object with ordered resolved style and component style ids that are sorted according to precedence.
+- Now when the components read this 5th param it straightway just passes the style id that should be applied according to the condition the component is in.
+
+Here’s a small diagram explaining how the flow works:
+
+<img src="./BabelResolverSteps.png" />
+
+Your code gets transpiled in the build files like this:
+
+<img src="./BabelResolverSteps.png" />
+
+## Installation Steps:
+
+1. Installing babel-plugin-styled-resolver:
+
+   ```bash
+   yarn add @dank-style/babel-plugin-styled-resolver
+   ```
+
+2. Add Babel plugin to your app babel.config.js
+
+   ```bash
+   const path = require('path');
+   const dankStyleResolver = require('@dank-style/babel-plugin-styled-resolver');
+   module.exports = function (api) {
+     api.cache(true);
+     return {
+       presets: ['babel-preset-expo'],
+       plugins: [
+         dankStyleResolver,
+       ],
+     };
+   };
+   ```
+
+3. Just make sure your babel.config.js and dank.config.js/ts are in the same directory. We suggest you keep both of them at the root of your app codebase.
