--- a/example/storybook/src/api/PropertyResolver/index.stories.mdx
+++ b/example/storybook/src/api/PropertyResolver/index.stories.mdx
@@ -4,51 +4,140 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Property Resolver
 
-<br />
-<br />
-<br />
+- Dank-style allows you to modify the resolution of value of any style property that you pass by providing a callback function against any style property that can be passed in your dank.config file or while creating a component using styled. So suppose you want to add support for rgba values in `background-color` you can follow the below example.
 
-## API
-
-<br />
-
-```jsx
-import React from 'react';
-import { View } from 'react-native';
-import { styled } from '@dank-style/react';
-
-function hexToRGB(hex: any, alpha: any) {
-  var r = parseInt(hex.slice(1, 3), 16),
-    g = parseInt(hex.slice(3, 5), 16),
-    b = parseInt(hex.slice(5, 7), 16);
-
-  if (alpha) {
-    return 'rgba(' + r + ', ' + g + ', ' + b + ', ' + alpha + ')';
-  } else {
-    return 'rgb(' + r + ', ' + g + ', ' + b + ')';
+```tsx
+function hexToRgba(hex, alpha) {
+  let r, g, b;
+  if (hex.length === 4) {
+    r = '0x' + hex[1] + hex[1];
+    g = '0x' + hex[2] + hex[2];
+    b = '0x' + hex[3] + hex[3];
+  } else if (hex.length === 7) {
+    r = '0x' + hex[1] + hex[2];
+    g = '0x' + hex[3] + hex[4];
+    b = '0x' + hex[5] + hex[6];
   }
+  return 'rgba(' + +r + ',' + +g + ',' + +b + ',' + alpha.toString() + ')';
 }
 
-const StyledPropertyResolver = styled(
-  View,
+const MyButton = styled(
+  Pressable,
   {
     baseStyle: {
-      style: { bg: '$primary500', h: '$40', w: '$40' },
+      style: {
+        bg: '$red500:alpha-50',
+      },
     },
   },
-  {},
+  {
+    descendantStyle: ['_text'],
+  },
   {
     propertyResolver: {
-      backgroundColor: (value: any, resolver: any) => {
-        return hexToRGB(resolver(value), 0.5);
+      backgroundColor: (rawValue, resolver) => {
+        if (rawValue.includes(':alpha-')) {
+          let opacity = resolver(rawValue.split(':alpha-')[1], 'opacity');
+          let value = rawValue.split(':alpha-')[0];
+          return hexToRgba(resolver(value), opacity);
+        } else {
+          return resolver(rawValue);
+        }
       },
     },
   }
 );
 ```
 
-## Usage
+- Note, to avoid complexities and make it easy to understand we stick to resolving only against the final style property that gets attached to the stylesheet. So you can’t provide resolvers against a specific alias.
 
-<Canvas>
-  <Story id="api-stories-propertyresolver--property-resolver" />
-</Canvas>
+```tsx
+function hexToRgba(hex, alpha) {
+  let r, g, b;
+  if (hex.length === 4) {
+    r = '0x' + hex[1] + hex[1];
+    g = '0x' + hex[2] + hex[2];
+    b = '0x' + hex[3] + hex[3];
+  } else if (hex.length === 7) {
+    r = '0x' + hex[1] + hex[2];
+    g = '0x' + hex[3] + hex[4];
+    b = '0x' + hex[5] + hex[6];
+  }
+  return 'rgba(' + +r + ',' + +g + ',' + +b + ',' + alpha.toString() + ')';
+}
+
+const MyButton = styled(
+  Pressable,
+  {
+    baseStyle: {
+      style: {
+        bg: '$red500:alpha-50',
+      },
+    },
+  },
+  {
+    descendantStyle: ['_text'],
+  },
+  {
+    propertyResolver: {
+      backgroundColor: (rawValue, resolver) => {
+        // ✔️
+        if (rawValue.includes(':alpha-')) {
+          let opacity = resolver(rawValue.split(':alpha-')[1], 'opacity');
+          let value = rawValue.split(':alpha-')[0];
+          return hexToRgba(resolver(value), opacity);
+        } else {
+          return resolver(rawValue);
+        }
+      },
+      bg: (rawValue, resolver) => {
+        // ❌
+        if (rawValue.includes(':alpha-')) {
+          let opacity = resolver(rawValue.split(':alpha-')[1], 'opacity');
+          let value = rawValue.split(':alpha-')[0];
+          return hexToRgba(resolver(value), opacity);
+        } else {
+          return resolver(rawValue);
+        }
+      },
+    },
+  }
+);
+```
+
+### API Reference:
+
+- **Parameters** :
+  - **value**: This is the raw value that is passed to the component (inline or from baseStyle).
+  - **resolver**: A function that takes in a token value and returns the corresponding output.
+- **Returns:** String or Numerical value that needs to be passed to the specific property inside the style prop of that component.
+
+> **Note**: The Property Resolver is locally scoped so if you define it in a components config then it will only modify that property value for that particular component. If you need this functionality globally you can define the same in dank.config.js/ts file as shown below.
+
+```tsx
+export const config = {
+  aliases: {
+    bg: 'backgroundColor',
+    backgroundColor: 'backgroundColor',
+    ...,
+    condition: 'condition',
+  },
+
+  tokens: {
+    ...,
+  },
+	propertyResolver:{
+		backgroundColor: (rawValue, resolver) => {
+      if (rawValue.includes(':alpha-')) {
+        let opacity = resolver(rawValue.split(':alpha-')[1], 'opacity');
+        let value = rawValue.split(':alpha-')[0];
+        return hexToRgba(resolver(value), opacity);
+      } else {
+        return resolver(rawValue);
+      }
+    },
+	}
+};
+```
+
+> **Warning:** We highly recommend you to not use this feature as this can impact your performance since this needs to be resolved on the fly and can not be optimised at build time.
