--- a/example/storybook/src/configuration/ThemeTokens/index.stories.mdx
+++ b/example/storybook/src/configuration/ThemeTokens/index.stories.mdx
@@ -4,6 +4,280 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Theme Tokens
 
-We can even preview multiple Stories in a block. This
-gets rendered as a group but defines individual stories
-with unique URLs, which is great for review and testing.
+- Dank uses "theme tokens" to store design-related values such as colors, typography, spacing, and more. Theme tokens are a way of centralizing these values in a single location, making it easy to change and maintain the design of your application.
+- To use theme tokens, you need to create a theme object that contains all the design tokens you want to use in your application. Here is an example of a theme object:
+
+```js
+const theme = {
+  colors: {
+    primary: 'blue',
+    secondary: 'green',
+    text: 'black',
+    background: 'white',
+  },
+  fonts: {
+    body: 'Arial, sans-serif',
+    heading: 'Georgia, serif',
+  },
+  fontSizes: {
+    small: '12px',
+    medium: '16px',
+    large: '20px',
+  },
+  space: [0, 4, 8, 16, 32],
+  breakpoints: {
+    xs: 0,
+    sm: 600,
+    md: 960,
+    lg: 1280,
+    xl: 1920,
+  },
+};
+```
+
+In this example, the theme object contains different properties for colors, fonts, font sizes and spacing. You can add as many properties as you need, such as typography, border radius, shadows, etc.
+
+## Using tokens
+
+Once you have defined your theme, you can pass it to the **`StyledProvider`** component as a prop and use it in your components.
+
+Here is an example of how you can use theme tokens in a component:
+
+```
+
+```
+
+## Using Aliases
+
+Dank supports the use of "aliases" to make it easier to work with theme tokens and other configuration options. Aliases allow you to give a shorthand name to a theme token or configuration value, making it easier to reference them in your code.
+
+To use aliases, you need to define them in your config file, such as **`dank.config.js`** or in your theme object. Here is an example of how you can define aliases in a config file:
+
+```js
+export const config = {
+  aliases: {
+    bg: 'backgroundColor',
+    p: 'padding',
+    m: 'margin',
+    c: 'color',
+    f: 'fontSize',
+  },
+  theme: {
+    colors: {
+      primary: 'blue',
+      secondary: 'green',
+      text: 'black',
+      background: 'white',
+    },
+    fonts: {
+      body: 'Arial, sans-serif',
+      heading: 'Georgia, serif',
+    },
+    fontSizes: {
+      small: '12px',
+      medium: '16px',
+      large: '20px',
+    },
+    space: [0, 4, 8, 16, 32],
+    breakpoints: {
+      xs: 0,
+      sm: 600,
+      md: 960,
+      lg: 1280,
+      xl: 1920,
+    },
+  },
+};
+```
+
+In this example, we have defined aliases for **`backgroundColor`**, **`padding`**, **`margin`**, **`color`**, and **`fontSize`**. Once the aliases are defined, you can use them in your component styles instead of the full property name.
+
+Here is an example of how you can use aliases in your component:
+
+## Property mapping
+
+- Token types are automatically mapped to CSS Properties for an improved developer experience.
+
+```js
+const borderStyles = 'borderStyles';
+const borderWidths = 'borderWidths';
+const colors = 'colors';
+const mediaQueries = 'mediaQueries';
+const opacity = 'opacity';
+const fonts = 'fonts';
+const fontSizes = 'fontSizes';
+const fontWeights = 'fontWeights';
+const letterSpacings = 'letterSpacings';
+const lineHeights = 'lineHeights';
+const radii = 'radii';
+const shadows = 'shadows';
+// const sizes = 'sizes';
+const space = 'space';
+const transitions = 'transitions';
+const zIndices = 'zIndices';
+export const propertyTokenMap = {
+  gap: space,
+  gridGap: space,
+  columnGap: space,
+  gridColumnGap: space,
+  rowGap: space,
+  gridRowGap: space,
+  inset: space,
+  insetBlock: space,
+  insetBlockEnd: space,
+  insetBlockStart: space,
+  insetInline: space,
+  insetInlineEnd: space,
+  insetInlineStart: space,
+  margin: space,
+  marginTop: space,
+  marginRight: space,
+  marginBottom: space,
+  marginLeft: space,
+  marginBlock: space,
+  marginBlockEnd: space,
+  marginBlockStart: space,
+  marginInline: space,
+  marginInlineEnd: space,
+  marginInlineStart: space,
+
+  marginHorizontal: space,
+  marginVertical: space,
+  padding: space,
+  paddingTop: space,
+  paddingRight: space,
+  paddingBottom: space,
+  paddingLeft: space,
+
+  paddingBlock: space,
+  paddingBlockEnd: space,
+  paddingBlockStart: space,
+  paddingInline: space,
+  paddingInlineEnd: space,
+  paddingInlineStart: space,
+
+  paddingHorizontal: space,
+  paddingVertical: space,
+
+  top: space,
+  right: space,
+  bottom: space,
+  left: space,
+  scrollMargin: space,
+  scrollMarginTop: space,
+  scrollMarginRight: space,
+  scrollMarginBottom: space,
+  scrollMarginLeft: space,
+  scrollMarginX: space,
+  scrollMarginY: space,
+  scrollMarginBlock: space,
+  scrollMarginBlockEnd: space,
+  scrollMarginBlockStart: space,
+  scrollMarginInline: space,
+  scrollMarginInlineEnd: space,
+  scrollMarginInlineStart: space,
+  scrollPadding: space,
+  scrollPaddingTop: space,
+  scrollPaddingRight: space,
+  scrollPaddingBottom: space,
+  scrollPaddingLeft: space,
+  scrollPaddingX: space,
+  scrollPaddingY: space,
+  scrollPaddingBlock: space,
+  scrollPaddingBlockEnd: space,
+  scrollPaddingBlockStart: space,
+  scrollPaddingInline: space,
+  scrollPaddingInlineEnd: space,
+  scrollPaddingInlineStart: space,
+  shadowOffset: space,
+  shadowRadius: space,
+  elevation: space,
+
+  fontSize: fontSizes,
+
+  background: colors,
+  backgroundColor: colors,
+  backgroundImage: colors,
+  borderImage: colors,
+  border: colors,
+  borderBlock: colors,
+  borderBlockEnd: colors,
+  borderBlockStart: colors,
+  borderBottom: colors,
+  borderBottomColor: colors,
+  borderColor: colors,
+  borderInline: colors,
+  borderInlineEnd: colors,
+  borderInlineStart: colors,
+  borderLeft: colors,
+  borderLeftColor: colors,
+  borderRight: colors,
+  borderRightColor: colors,
+  borderTop: colors,
+  borderTopColor: colors,
+  caretColor: colors,
+  color: colors,
+  columnRuleColor: colors,
+  fill: colors,
+  outline: colors,
+  outlineColor: colors,
+  stroke: colors,
+  textDecorationColor: colors,
+  shadowColor: colors,
+
+  shadowOpacity: opacity,
+
+  shadow: shadows,
+  // Media Query
+  condition: mediaQueries,
+
+  fontFamily: fonts,
+
+  fontWeight: fontWeights,
+
+  lineHeight: lineHeights,
+
+  letterSpacing: letterSpacings,
+
+  blockSize: space,
+  minBlockSize: space,
+  maxBlockSize: space,
+  inlineSize: space,
+  minInlineSize: space,
+  maxInlineSize: space,
+  width: space,
+  minWidth: space,
+  maxWidth: space,
+  height: space,
+  minHeight: space,
+  maxHeight: space,
+  flexBasis: space,
+  gridTemplateColumns: space,
+  gridTemplateRows: space,
+
+  borderWidth: borderWidths,
+  borderTopWidth: borderWidths,
+  borderRightWidth: borderWidths,
+  borderBottomWidth: borderWidths,
+  borderLeftWidth: borderWidths,
+
+  borderStyle: borderStyles,
+  borderTopStyle: borderStyles,
+  borderRightStyle: borderStyles,
+  borderBottomStyle: borderStyles,
+  borderLeftStyle: borderStyles,
+
+  borderRadius: radii,
+  borderTopLeftRadius: radii,
+  borderTopRightRadius: radii,
+  borderBottomRightRadius: radii,
+  borderBottomLeftRadius: radii,
+
+  boxShadow: shadows,
+  textShadow: shadows,
+
+  transition: transitions,
+
+  zIndex: zIndices,
+} as const;
+```
