feat: adding story in color mode base style

--- a/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
@@ -52,7 +52,7 @@ const StyledComponent = styled(
 );
 ```
 
-```
+```tsx
 export type COLORMODES = 'dark' | 'light';
 ```
 
@@ -110,3 +110,7 @@ export function ColorMode({ ...args }) {
   );
 }
 ```
+
+<Canvas>
+  <Story id="api-stories-colormode--color-mode" />
+</Canvas>
