feat: added goals and intro

--- a/example/storybook/src/overview/Performance/index.stories.mdx
+++ b/example/storybook/src/overview/Performance/index.stories.mdx
@@ -1,8 +1,8 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="Overview/Benchmark" />
+<Meta title="Overview/Performance" />
 
-# Benchmark
+# Performance
 
 We can even preview multiple Stories in a block. This
 gets rendered as a group but defines individual stories
