fix: specificity fixes

--- a/example/storybook/src/api/Specificity/index.stories.mdx
+++ b/example/storybook/src/api/Specificity/index.stories.mdx
@@ -1,8 +1,8 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="api/Specificity" />
+<Meta title="api/Variants and Sizes" />
 
-# Specificity
+# Variants and Sizes
 
 <br />
 <br />
