feat: added image

--- a/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
+++ b/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
@@ -17,11 +17,9 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 Here’s a small diagram explaining how the flow works:
 
-<img src="./BabelResolverSteps.png" />
+<img src="/assets/BabelResolverSteps.png" />
 
 Your code gets transpiled in the build files like this:
-
-<img src="./BabelResolverSteps.png" />
 
 ## Installation Steps:
 
