fix: docs changes

--- a/example/storybook/src/api/Specificity/index.stories.mdx
+++ b/example/storybook/src/api/Specificity/index.stories.mdx
@@ -1,8 +1,8 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="api/Variants and Sizes" />
+<Meta title="api/Specificity" />
 
-# Variants and Sizes
+# Specificity
 
 <br />
 <br />
