--- a/example/storybook/src/api/VariantsAndSizes/index.stories.mdx
+++ b/example/storybook/src/api/VariantsAndSizes/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="api/Specificity" />
+<Meta title="api/Variants and Sizes" />
 
 # Variants & Sizes
 
