--- a/example/storybook/src/overview/Performance/index.stories.mdx
+++ b/example/storybook/src/overview/Performance/index.stories.mdx
@@ -4,6 +4,19 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Performance
 
-We can even preview multiple Stories in a block. This
-gets rendered as a group but defines individual stories
-with unique URLs, which is great for review and testing.
+Performance is a crucial aspect of any web and mobile application and `dank` is designed to deliver optimal performance even on complex application with a large number of elements.
+
+Dank is designed to provide high performance styling for your application. We have made several optimizations to ensure that `dank` is fast and efficient, including runtime performance optimizations and a babel plugin for pre-computing styles during the build process. The babel plugin can be configured to suit your specific needs, and it is highly recommended to use it in production to achieve optimal performance.
+
+To measure the performance of `dank`, we used Lighthouse to test the performance of our landing page, which was built using `dank` with a large number of elements and achieved a high Lighthouse performance score. The Lighthouse score for this page is as follows:
+
+- Performance: 98
+- Accessibility: 100
+- Best Practices: 90
+- SEO: 100
+
+You can check this website[https://dank.style] and see the lighthouse report by yourself.
+
+In addition, the library also has support for Server-Side Rendering (SSR) by providing a flush function which allows the styles to be rendered on the server, and then hydrated on the client. This eliminates the FOUC (Flash of Unstyled Content) issue and improves the overall user experience.
+
+Overall, `dank` has been designed to provide high performance styling for your application, and we continue to make optimizations and improvements to ensure that it remains fast and efficient.
