feat: docs updated

--- a/example/storybook/src/overview/Performance/index.stories.mdx
+++ b/example/storybook/src/overview/Performance/index.stories.mdx
@@ -11,11 +11,11 @@ Dank is designed to provide high performance styling for your application. We ha
 To measure the performance of `dank`, we used Lighthouse to test the performance of our landing page, which was built using `dank` with a large number of elements and achieved a high Lighthouse performance score. The Lighthouse score for this page is as follows:
 
 - Performance: 98
-- Accessibility: 100
-- Best Practices: 90
-- SEO: 100
+- Accessibility: 90
+- Best Practices: 100
+- SEO: 90
 
-You can check this website[https://dank.style] and see the lighthouse report by yourself.
+You can check this [website](https://dank.style) and see the lighthouse report by yourself.
 
 In addition, the library also has support for Server-Side Rendering (SSR) by providing a flush function which allows the styles to be rendered on the server, and then hydrated on the client. This eliminates the FOUC (Flash of Unstyled Content) issue and improves the overall user experience.
 
