feat: color mode docs

--- a/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
@@ -111,6 +111,12 @@ export function ColorMode({ ...args }) {
 }
 ```
 
+### How to get current colormode using useStyled
+
+```jsx
+
+```
+
 <Canvas>
   <Story id="api-stories-colormode--color-mode" />
 </Canvas>
