--- a/example/storybook/src/components/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/FormControl/index.stories.mdx
@@ -2,7 +2,9 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="recipes/HStack" />
 
-# HStack
+# FormControl
+
+"FormControl" component is used to create a container for form elements, like text inputs, checkboxes, and radio buttons. In React Native, the FormControl component can be generated using a third-party accessibility-focused library that uses "styled views" to define the layout, visual design, and behavior of the component.
 
 <Canvas style={{ height: 200 }}>
   <Story id="recipes-stories-hstack--h-stack-story" />
