feat: added content

--- a/example/storybook/src/components/Input/InputGroup.stories.mdx
+++ b/example/storybook/src/components/Input/InputGroup.stories.mdx
@@ -4,6 +4,23 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # InputGroup
 
+InputGroup is a component that allows you to add an icon or button to an input.
+
+## Usage
+
+import { InputGroup } from '@universa11y/input';
+
+```jsx
+<InputGroup id="input-group" placeholder="Placeholder" />
+```
+
+## Props
+
+| Name        | Type   | Default | Description                  |
+| ----------- | ------ | ------- | ---------------------------- |
+| id          | string |         | The id of the input          |
+| placeholder | string |         | The placeholder of the input |
+
 <Canvas style={{ height: 200 }}>
   <Story id="recipes-stories-input--input-group-story" />
 </Canvas>
