--- a/example/storybook/src/components/Link/index.stories.mdx
+++ b/example/storybook/src/components/Link/index.stories.mdx
@@ -4,6 +4,8 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Link
 
+"Link" component is used to create a clickable hyperlink in React Native. In React Native, the Link component can be generated using a third-party accessibility-focused library that uses "styled views" and "text" to define the layout, visual design, and behavior of the component.
+
 <Canvas style={{ height: 200 }}>
   <Story id="recipes-stories-link--link-story" />
 </Canvas>
