--- a/example/storybook/src/components/Pressable/index.stories.mdx
+++ b/example/storybook/src/components/Pressable/index.stories.mdx
@@ -4,6 +4,8 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Pressable
 
+A Pressable component is used to create clickable elements that perform an action when pressed. In React Native, the Pressable component is typically generated using "styled views" and "pressable" to define the layout, visual design, and behavior of the button.
+
 <Canvas style={{ height: 200 }}>
   <Story id="recipes-stories-pressable--pressable-story" />
 </Canvas>
