--- a/example/storybook/src/components/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Menu/index.stories.mdx
@@ -4,6 +4,8 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Menu
 
+"Menu" component is used to create a menu of options that can be displayed on demand in React Native. In React Native, the Menu component can be generated using a third-party accessibility-focused library that uses "styled views", "Pressable" and "Text" to define the layout, visual design, and behavior of the component.
+
 <Canvas style={{ height: 200 }}>
   <Story id="recipes-stories-menu--menu-story" />
 </Canvas>
