--- a/example/storybook/src/components/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Radio/index.stories.mdx
@@ -4,6 +4,8 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Radio
 
+A Radio component is used to provide a way for users to select one option from a set of predefined choices. In React Native, the Radio component can be generated using a third-party accessibility-focused library that combines "styled views" and "pressable" to define the layout, visual design, and behavior of the component.
+
 <Canvas style={{ height: 200 }}>
   <Story id="story/recipes-stories-radio--radio-story" />
 </Canvas>
