--- a/example/storybook/src/components/TextArea/index.stories.mdx
+++ b/example/storybook/src/components/TextArea/index.stories.mdx
@@ -2,7 +2,17 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="recipes/Text Area" />
 
-# Text Area
+# TextArea
+
+TextArea is a component that allows you to add an string value in a paragraph to an input.
+
+## Usage
+
+import { Textarea } from '@universa11y/textarea';
+
+```jsx
+<Textarea id="textarea" placeholder="Placeholder" />
+```
 
 <Canvas style={{ height: 200 }}>
   <Story id="recipes-stories-textarea--text-area-story" />
