--- a/example/storybook/src/components/VStack/index.stories.mdx
+++ b/example/storybook/src/components/VStack/index.stories.mdx
@@ -2,7 +2,9 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="recipes/Vstack" />
 
-# Vstack
+# VStack
+
+"VStack" component is used to create a vertical stack layout for child components in React Native. In React Native, the VStack component can be generated using a third-party accessibility-focused library that uses "styled views" to define the layout, visual design, and behavior of the component.
 
 <Canvas style={{ height: 200 }}>
   <Story id="recipes-stories-vstack--v-stack-story" />
